judo-runtime-core-jsl-itest/src/test/resources/model/AutoMappedTransferSingleEntityModel/AutoMappedTransferSingleEntity.jsl
model AutoMappedTransferSingleEntity;

import judo::types;

entity ReferenceEntity {
    field String name;
}

entity ContainerSingleCompositionEntity {
    field ReferenceEntity singleComposition;
    field required ReferenceEntity singleRequiredComposition;
    //TODO JNG-4909
    field ReferenceEntity singleCompositionDefault = ReferenceEntity!all()!filter(e | e.name == "CompositionDefault")!any();
//     field required ReferenceEntity singleRequiredCompositionDefault = ReferenceEntity!all()!filter(e | e.name == "RequiredCompositionDefault")!any(); //error
}

transfer AutoMappedReferenceEntity(ReferenceEntity mappedEntity);

transfer AutoMappedContainerSingleComposition(ContainerSingleCompositionEntity mappedEntity);


// TODO JNG-4906
entity TwoWayReferenceEntity {
}

transfer AutoMappedTwoWayReferenceEntity(TwoWayReferenceEntity mappedEntity);

entity ContainerSingleAssociationEntity {
    relation ReferenceEntity singleRelation;
    relation required ReferenceEntity singleRequiredRelation;
    relation TwoWayReferenceEntity twoWayReferenceEntityRelation opposite-add : twoWayContainerRelation;
}

transfer AutoMappedContainerSingleAssociation(ContainerSingleAssociationEntity mappedEntity);

entity ContainerSingleCompositionDerivedEntity {

    field ReferenceEntity singleComposition;
    field required ReferenceEntity singleRequiredComposition;
    field ReferenceEntity singleCompositionDefault = ReferenceEntity!all()!filter(e | e.name == "CompositionDefault")!any();
    // TODO JNG-4909
//     field required ReferenceEntity singleRequiredCompositionDefaultEntity = ReferenceEntity!all()!filter(e | e.name == "RequiredCompositionDefault")!any(); //error

    relation ReferenceEntity singleCompositionEntityExpressionDerived <= referenceEntityWithNameQuery(name ="singleComposition");
    relation ReferenceEntity singleCompositionEntityMemberDerived <= self.singleRequiredComposition;
    relation ReferenceEntity singleCompositionEntityRequiredMemberDerived <= self.singleRequiredComposition;
    relation ReferenceEntity singleCompositionEntityQueryMemberDerived <= self.singleCompositionEntityExpressionQuery(name ="singleComposition");

    @Lazy
    relation ReferenceEntity singleCompositionEntityExpressionQuery(String name) <= referenceEntityWithNameQuery(name = name);

}

transfer AutoMappedContainerSingleCompositionDerivedEntity(ContainerSingleCompositionDerivedEntity mappedEntity);

query ReferenceEntity referenceEntityWithNameQuery(String name) <= ReferenceEntity!all()!filter(e | e.name == name)!any();

entity ContainerSingleRelationDerivedEntity {

    relation ReferenceEntity singleComposition;
    relation required ReferenceEntity singleRequiredComposition;
    relation TwoWayReferenceEntity twoWayReferenceEntityRelation opposite-add : twoWayContainerRelationOnDerived;

    relation ReferenceEntity singleCompositionEntityExpressionDerived <= referenceEntityWithNameQuery(name ="singleRelation");
    relation ReferenceEntity singleCompositionEntityMemberDerived <= self.singleRequiredComposition;
    relation ReferenceEntity singleCompositionEntityRequiredMemberDerived <= self.singleRequiredComposition;
    relation ReferenceEntity singleCompositionEntityQueryMemberDerived <= self.singleCompositionEntityExpressionQuery(name ="singleRelation");

    @Lazy
    relation ReferenceEntity singleCompositionEntityExpressionQuery(String name) <= referenceEntityWithNameQuery(name = name);

}

transfer AutoMappedContainerSingleRelationDerivedEntity(ContainerSingleRelationDerivedEntity mappedEntity);
